Fix overflow bug new server index

--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -49,7 +49,7 @@ body {
 
 .splash div {
   width: 100%;
-  min-height: 30px;
+  // min-height: 75px;
 }
 
 .signup-login {
