--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -4,11 +4,13 @@
   background-color: #2f3136;
   position: absolute;
   display: flex;
+  overflow: hidden;
 }
 
 #server-index {
   background-color: #202225;
   font-family: Arial, Helvetica, sans-serif;
+  overflow: scroll;
   width: 72px;
   height: 100%;
   display: flex;
@@ -121,6 +123,8 @@
 
 #user-logout-container {
   background-color: #292b2f;
+  position: absolute;
+  left: 76px;
   display: flex;
   justify-content: space-between;
   height: 52px;
