--- a/app/assets/stylesheets/server-form.scss
+++ b/app/assets/stylesheets/server-form.scss
@@ -62,6 +62,7 @@
   padding: 8px;
   border: none;
   border-bottom: 2px solid #e3e5e8;
+  cursor: text;
 }
 
 #server-name-title {
